35219 few more input/search combination fixed on mobile. css refactoring.

--- a/Web/Edubase.Web.UI/Assets/Sass/elements/_forms.scss
+++ b/Web/Edubase.Web.UI/Assets/Sass/elements/_forms.scss
@@ -379,11 +379,6 @@ fieldset legend.heading-small {
     padding: 3px;
 }
 
-.inline-submit {
-    font-size: 16px;
-    margin-left: 20px;
-}
-
 .inline-button {
     @include media (tablet) {
         font-size: 16px;
