--- a/Web/Edubase.Web.UI/Assets/Sass/views/_create-edit-establishment.scss
+++ b/Web/Edubase.Web.UI/Assets/Sass/views/_create-edit-establishment.scss
@@ -464,15 +464,6 @@ div.shared-governor-list {
 
 
 .create-childrens-centre {
-    .inline-submit {
-        margin-left: 0;
-        padding-left: 40px;
-        padding-right: 40px;
-
-    }
-    .inline-with-button .form-control {
-        width: 50%;
-    }
     .button-row {
         padding-top: 50px;
     }
